--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>BeerFrontEnd</title>
+  <title>Chuglog</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-<link href="styles.8bfff16b6d699770d802.bundle.css" rel="stylesheet"/></head>
+<link href="styles.1888b00736f6f27f3973.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.8b5dab2d97d76ceeb53b.bundle.js"></script><script type="text/javascript" src="polyfills.81ed681e29bd26c517a4.bundle.js"></script><script type="text/javascript" src="vendor.25e9c7dc10cfe560dd76.bundle.js"></script><script type="text/javascript" src="main.fa0e4dc71c56c6e9e6a7.bundle.js"></script></body>
+<script type="text/javascript" src="inline.9e2c367f3a56e9d74c59.bundle.js"></script><script type="text/javascript" src="polyfills.81ed681e29bd26c517a4.bundle.js"></script><script type="text/javascript" src="vendor.25e9c7dc10cfe560dd76.bundle.js"></script><script type="text/javascript" src="main.0eeadc05a86404b09eda.bundle.js"></script></body>
 </html>
